feat(RPS-1214): streaming execution (#68)
Co-authored-by: Dirk Sonnemann <dirk.sonnemann@wandelbots.com>
Co-authored-by: Christoph Biering <1353438+biering@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ pytest = "^8.3.4"
 pytest-asyncio = ">=0.24,<0.26"
 mypy = "^1.13.0"
 pre-commit = "^4.0.1"
+icecream = "^2.1.4"
 
 [tool.poetry.extras]
 nova-rerun-bridge = [
