feat(RPS-1253): use default loguru sink (#78)

--- a/.env.template
+++ b/.env.template
@@ -11,3 +11,10 @@ NOVA_PASSWORD="my_password"
 
 # Using token-based authentication (comment out username/password lines)
 # NOVA_ACCESS_TOKEN="eyJhbGciOi..."
+
+
+# Configure logger
+# LOG_LEVEL="INFO"
+# LOG_FORMAT="%(asctime)s [%(levelname)s] %(name)s: %(message)s",
+# LOGGER_NAME="wandelbots-nova"
+# LOG_DATETIME_FORMAT="%Y-%m-%d %H:%M:%S"
