refactor: update type hints to use built-in types and improve error logging

--- a/.gitignore
+++ b/.gitignore
@@ -166,7 +166,6 @@ nova_rerun_bridge/rerun_app/nova_rerun_bridge
 nova_rerun_bridge/rerun_app/pyproject.toml
 nova_rerun_bridge/rerun_app/poetry.lock
 nova_rerun_bridge/rerun_app/README.md
-nova_rerun_bridge/rerun_app/kubeconfig
 nova_rerun_bridge/rerun_app/nova
 
 nova_rerun_bridge/nova_rerun_bridge_app/models
@@ -174,9 +173,9 @@ nova_rerun_bridge/nova_rerun_bridge_app/nova_rerun_bridge
 nova_rerun_bridge/nova_rerun_bridge_app/pyproject.toml
 nova_rerun_bridge/nova_rerun_bridge_app/poetry.lock
 nova_rerun_bridge/nova_rerun_bridge_app/README.md
-nova_rerun_bridge/nova_rerun_bridge_app/kubeconfig
 nova_rerun_bridge/nova_rerun_bridge_app/nova
 
 kubeconfig
+**/kubeconfig
 
 benchmark_results
