--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,11 +32,12 @@ scipy = "^1.14.1"
 aiostream = "^0.6.4"
 anyio = "^4.8.0"
 asyncstdlib = "^3.13.0"
+numpy = "^2.1.3"
 rerun-sdk = { version = "=0.22.0", optional = true }
 requests = { version = ">=2.32.3", optional = true }
 APScheduler = { version = ">=3.11.0", optional = true }
 trimesh = { version = ">=4.5.3", optional = true }
-robometrics = { git = "https://github.com/fishbotics/robometrics.git", extras = ["evaluator"], optional = true }
+pyyaml = { version = ">5.3", optional = true } 
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.1"
@@ -59,7 +60,7 @@ benchmark = [
     "requests",
     "APScheduler",
     "trimesh",
-    "robometrics"
+    "pyyaml"
 ]
 
 [build-system]
