--- a/.github/workflows/autodocs.yml
+++ b/.github/workflows/autodocs.yml
@@ -36,7 +36,7 @@ jobs:
         run: poetry install
 
       - name: Generate documentation
-        run: poetry run pdoc nova -o ./docs
+        run: poetry run pdoc nova nova_rerun_bridge -o ./docs
 
       - name: Setup GitHub Pages
         uses: actions/configure-pages@v5
