changed branch to main as feature branch does not have permission to deploy

--- a/.github/workflows/autodocs.yml
+++ b/.github/workflows/autodocs.yml
@@ -3,7 +3,7 @@ name: Deploy Docs to GitHub Pages
 on:
   push:
     branches:
-      - feature/add-autodoc-generation-to-pipeline
+      - main
 
 permissions:
   contents: read
