feat: update .env.template with Auth0 credentials instructions and add .gitattributes for linguist configuration

--- a/.env.template
+++ b/.env.template
@@ -12,6 +12,10 @@ NOVA_PASSWORD="my_password"
 # Using token-based authentication (comment out username/password lines)
 # NOVA_ACCESS_TOKEN="eyJhbGciOi..."
 
+# Request your Auth0 credentials from support@wandelbots.com to automate the authentication process
+# NOVA_AUTH0_DOMAIN=""
+# NOVA_AUTH0_CLIENT_ID=""
+# NOVA_AUTH0_AUDIENCE=""
 
 # Configure logger
 # LOG_LEVEL="INFO"
