--- a/nova_rerun_bridge/minimal_example/pyproject.toml
+++ b/nova_rerun_bridge/minimal_example/pyproject.toml
@@ -1,23 +1,19 @@
-[tool.poetry]
-name = "Minimal Example Nova Rerun Bridge"
+[project]
+name = "nova_rerun"
 version = "0.0.1"
-package-mode = false
 description = "Minimal example of a project using the nova_rerun_bridge"
 authors = [
-    "Wandelbots GmbH",
-    "Stefan Wagner <stefan.wagner@wandelbots.com>",
+    { name = "Wandelbots GmbH" },
+    { name = "Stefan Wagner", email = "stefan.wagner@wandelbots.com" }
 ]
 readme = "README.md"
+requires-python = ">=3.10"
+dependencies = [
+    "wandelbots-nova[nova-rerun-bridge]>=0.12",
+    "python-dotenv>=1.0.0"
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-rerun-sdk = "^0.21.0"
-wandelbots-nova = { version = ">=0.12", extras = ["nova-rerun-bridge"] }
-python-decouple = "^3.8"
-requests = "^2.32.3"
-APScheduler = "^3.11.0"
-scipy = "^1.14.1"
-trimesh = "^4.5.3"
-
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.9.2"
+[project.optional-dependencies]
+dev = [
+    "ruff>=0.9.2"
+]
