--- a/.github/workflows/push_nova_rerun_bridge_image.yaml
+++ b/.github/workflows/push_nova_rerun_bridge_image.yaml
@@ -1,4 +1,4 @@
-name: Docker Build Nova Rerun Bridge
+name: "[nova-rerun-bridge] Docker Build Nova Rerun Bridge"
 on:
   workflow_run:
     workflows: ["Release"]
