--- a/.github/workflows/nova-release.yaml
+++ b/.github/workflows/nova-release.yaml
@@ -22,13 +22,16 @@ jobs:
       - name: Setup | Force correct release branch on workflow sha
         run: |
           git checkout -B ${{ github.ref_name }} ${{ github.sha }}
-      - name: Action | Semantic Version Release
-        id: release
-        uses: python-semantic-release/python-semantic-release@v9.20.0
+      - uses: cschleiden/replace-tokens@v1.3
         env:
           NOVA_AUTH0_DOMAIN: ${{ secrets.NOVA_AUTH0_DOMAIN }}
           NOVA_AUTH0_CLIENT_ID: ${{ secrets.NOVA_AUTH0_CLIENT_ID }}
           NOVA_AUTH0_AUDIENCE: ${{ secrets.NOVA_AUTH0_AUDIENCE }}
+        with:
+          files: '["nova/auth/auth_config.py"]'
+      - name: Action | Semantic Version Release
+        id: release
+        uses: python-semantic-release/python-semantic-release@v9.20.0
         with:
           build: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
