--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ requests = { version = ">=2.32.3", optional = true }
 APScheduler = { version = ">=3.11.0", optional = true }
 trimesh = { version = ">=4.5.3", optional = true }
 pyyaml = { version = ">5.3", optional = true }
+asyncua = "^1.1.5"
 
 [tool.poetry.group.dev.dependencies]
 ruff = ">=0.8.2,<0.10.0"
