chore: Add VSCode colors for the Nova project
When opening the project in VSCode, the colors of the status bar will be
purple as opposed to the standard VSCode colors.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,11 @@
     "notebook.source.fixAll": "explicit"
   },
   "notebook.formatOnSave.enabled": true,
-  "ruff.importStrategy": "fromEnvironment"
+  "ruff.importStrategy": "fromEnvironment",
+  "workbench.colorCustomizations": {
+    "statusBar.background": "#7C21D7",
+    "statusBar.debuggingBackground": "#7C21D7",
+    "statusBar.noFolderBackground": "#7C21D7",
+    "statussBar.prominentBackground": "#7C21D7"
+  }
 }
