--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ pytest-asyncio = ">=0.24,<0.26"
 mypy = "^1.13.0"
 pre-commit = "^4.0.1"
 icecream = "^2.1.4"
+ipython = "<9"
 
 [tool.poetry.extras]
 nova-rerun-bridge = [
