--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ download-models = "nova_rerun_bridge.helper_scripts.download_models:update_robot
 [tool.poetry.dependencies]
 python = "^3.10"
 httpx = "^0.28.0"
-wandelbots_api_client = "25.1.0"
+wandelbots_api_client = "25.4.0.dev3"
 websockets = "^14.1.0"
 loguru = "^0.7.2"
 pydantic = "^2.10.3"
