--- a/.github/workflows/push_rerun_image.yaml
+++ b/.github/workflows/push_rerun_image.yaml
@@ -26,7 +26,7 @@ jobs:
           mkdir -p temp_build
 
           DIRS_TO_COPY=("nova" "nova_rerun_bridge")
-          FILES_TO_COPY=("pyproject.toml" "poetry.lock" "README.md")
+          FILES_TO_COPY=("pyproject.toml" "uv.lock" "README.md")
 
           # Copy to temp directory first
           for dir in "${DIRS_TO_COPY[@]}"; do
