--- a/nova_rerun_bridge/rerun_app/Dockerfile
+++ b/nova_rerun_bridge/rerun_app/Dockerfile
@@ -1,12 +1,7 @@
 FROM python:3.11-slim AS builder
 
 RUN pip install --upgrade pip \
-    && pip install poetry==2.0.1
-
-ENV POETRY_NO_INTERACTION=1 \
-    POETRY_VIRTUALENVS_IN_PROJECT=1 \
-    POETRY_VIRTUALENVS_CREATE=1 \
-    POETRY_CACHE_DIR=/tmp/poetry_cache
+    && pip install uv
 
 WORKDIR /app
 
@@ -14,7 +9,7 @@ WORKDIR /app
 COPY . .
 
 # Install dependencies including the local package
-RUN --mount=type=cache,target=$POETRY_CACHE_DIR poetry install --extras "nova-rerun-bridge"
+RUN uv sync --extra "nova-rerun-bridge"
 
 FROM python:3.11-slim AS runtime
 
