--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "asyncstdlib>=3.13.0,<4",
     "numpy>1.1.19",
     "asyncua>=1.1.5,<2",
+    "docstring-parser>=0.16.0"
 ]
 
 [project.optional-dependencies]
@@ -57,7 +58,6 @@ dev = [
     "ipython<9",
 ]
 
-docstring-parser = "^0.16.0"
 [tool.hatch.build.targets.sdist]
 include = [
     "nova",
