fix: special chars are not allowed

--- a/.github/workflows/push_nova_rerun_bridge_image.yaml
+++ b/.github/workflows/push_nova_rerun_bridge_image.yaml
@@ -2,7 +2,7 @@
 name: "[nova-rerun-bridge] Docker Build Nova Rerun Bridge"
 on:
   workflow_run:
-    workflows: ["[nova] Release"]
+    workflows: ["nova-release.yaml"]
     types:
       - completed
     branches:
