--- a/.github/workflows/push_rerun_image.yaml
+++ b/.github/workflows/push_rerun_image.yaml
@@ -2,7 +2,7 @@
 name: "[nova-rerun-bridge] Docker Build Rerun"
 on:
   workflow_run:
-    workflows: ["[nova] Release"]
+    workflows: ["nova-release.yaml"]
     types:
       - completed
     branches:
