--- a/.github/workflows/push_rerun_image.yaml
+++ b/.github/workflows/push_rerun_image.yaml
@@ -2,7 +2,8 @@
 name: "[nova-rerun-bridge] Docker Build Rerun"
 on:
   workflow_run:
-    workflows: ["nova-release.yaml"]
+    workflows:
+      - \[nova\] Release
     types:
       - completed
     branches:
