--- a/.github/workflows/nova-run-examples.yaml
+++ b/.github/workflows/nova-run-examples.yaml
@@ -54,6 +54,14 @@ jobs:
         run: |
           pip install uv
           uv sync --extra "nova-rerun-bridge"
+      - name: Run integration tests
+        run: |
+          touch ./.env
+          echo "NOVA_API=https://${{ env.PORTAL_STG_HOST }}" >> ./.env
+          echo "NOVA_ACCESS_TOKEN=${{ env.PORTAL_STG_ACCESS_TOKEN }}" >> ./.env
+          echo "CELL_NAME=cell" >> ./.env
+
+          PYTHONPATH=. uv run pytest -rs -v -m "integration"
       - name: "Run example: examples/${{ matrix.example_file }}"
         run: |
           touch ./.env
