--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "asyncstdlib >=3.13.0,<4",
     "numpy >1.1.19",
     "asyncua >=1.1.5,<2",
-    "docstring-parser >=0.16.0"
+    "docstring-parser >=0.16.0",
 ]
 
 [project.optional-dependencies]
@@ -88,6 +88,9 @@ norecursedirs = "develop .ipynb_checkpoints .venv .tox *.egg"
 testpaths = """
     nova
     tests
+"""
+markers = """
+    integration: mark a test as requiring a running Nova instance
 """
 
 [tool.mypy]
