chore: Add backport library `exceptiongroup`
Add the backport library `exceptiongroup` to support `ExceptionGroup`s
in Python 3.10 which is the minimum version we support.

We use ExceptionGroup objects already in `runner.py` and
`nova.runtime.utils`.

Consequently, remove a now unused `type: ignore` pragma at one
`exceptionGroup`'s usage.

`ExceptionGroup` are native to Python 3.11 and onwards.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "numpy >1.1.19",
     "asyncua >=1.1.5,<2",
     "docstring-parser >=0.16.0",
+    "exceptiongroup>=1.2.2",
 ]
 
 [project.optional-dependencies]
