--- a/.github/workflows/nova-run-examples.yaml
+++ b/.github/workflows/nova-run-examples.yaml
@@ -8,6 +8,40 @@ concurrency:
   group: run-examples-workflow
   cancel-in-progress: false
 jobs:
+  # This job creates a NOVA instance and captures the connection details
+  setup-instance:
+    runs-on: ubuntu-latest
+    outputs:
+      portal_stg_host: ${{ steps.export-vars.outputs.portal_stg_host }}
+      portal_stg_instance_id: ${{ steps.export-vars.outputs.portal_stg_instance_id }}
+      portal_stg_access_token: ${{ steps.export-vars.outputs.portal_stg_access_token }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+      - name: Create NOVA instance and capture connection details
+        id: create
+        env:
+          PORTAL_STG_REFRESH_URL: ${{ secrets.PORTAL_STG_REFRESH_URL }}
+          PORTAL_STG_REFRESH_CLIENT_ID: ${{ secrets.PORTAL_STG_REFRESH_CLIENT_ID }}
+          PORTAL_STG_REFRESH_TOKEN: ${{ secrets.PORTAL_STG_REFRESH_TOKEN }}
+          API_VERSION: "v1"
+          PROJECT_VERSION: "1.0.0"
+          GITHUB_RUN_ID: ${{ github.run_id }}
+          INSECURE_CURL: "true"
+        run: |
+          if ! source ./scripts/create_nova_instance.sh; then
+            echo "Failed to create NOVA instance."
+            exit 1
+          fi
+          # expose as job outputs
+          {
+            echo "portal_stg_host=$PORTAL_STG_HOST"
+            echo "portal_stg_instance_id=$PORTAL_STG_INSTANCE_ID"
+            echo "portal_stg_access_token=$PORTAL_STG_ACCESS_TOKEN"
+          } >> "$GITHUB_OUTPUT"
+  # This job runs the integration tests and examples
   test-integration:
     runs-on: ubuntu-latest
     strategy:
@@ -35,6 +69,10 @@ jobs:
             run_cmd: "python examples/08_multi_step_movement_with_collision_free.py"
           - id: 14_welding_example
             run_cmd: "python nova_rerun_bridge/examples/14_welding_example.py"
+    env:
+      PORTAL_STG_HOST: ${{ needs.setup-instance.outputs.portal_stg_host }}
+      PORTAL_STG_INSTANCE_ID: ${{ needs.setup-instance.outputs.portal_stg_instance_id }}
+      PORTAL_STG_ACCESS_TOKEN: ${{ needs.setup-instance.outputs.portal_stg_access_token }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -42,26 +80,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
-      - name: Create NOVA instance and check connection
-        env:
-          PORTAL_STG_REFRESH_URL: ${{ secrets.PORTAL_STG_REFRESH_URL }}
-          PORTAL_STG_REFRESH_CLIENT_ID: ${{ secrets.PORTAL_STG_REFRESH_CLIENT_ID }}
-          PORTAL_STG_REFRESH_TOKEN: ${{ secrets.PORTAL_STG_REFRESH_TOKEN }}
-          API_VERSION: "v1"
-          # Optional
-          PROJECT_VERSION: "1.0.0"
-          GITHUB_RUN_ID: ${{ github.run_id }}
-          INSECURE_CURL: "true"
-        run: |
-          if ! source ./scripts/create_nova_instance.sh; then
-            echo "Failed to create NOVA instance."
-            exit 1
-          fi
-
-          echo $PORTAL_STG_HOST
-          echo "PORTAL_STG_HOST=$PORTAL_STG_HOST" >> $GITHUB_ENV
-          echo "PORTAL_STG_INSTANCE_ID=$PORTAL_STG_INSTANCE_ID" >> $GITHUB_ENV
-          echo "PORTAL_STG_ACCESS_TOKEN=$PORTAL_STG_ACCESS_TOKEN" >> $GITHUB_ENV
       - name: Set up Python environment
         run: |
           pip install uv
@@ -69,24 +87,23 @@ jobs:
       - name: "Run ${{ matrix.id }} suite"
         run: |
           # export the environment variables for the run command
-          echo "NOVA_API=https://${{ env.PORTAL_STG_HOST }}" >> ./.env
-          echo "NOVA_ACCESS_TOKEN=${{ env.PORTAL_STG_ACCESS_TOKEN }}" >> ./.env
-          echo "CELL_NAME=cell" >> ./.env
+          {
+            echo "NOVA_API=https://${PORTAL_STG_HOST}"
+            echo "NOVA_ACCESS_TOKEN=${PORTAL_STG_ACCESS_TOKEN}"
+            echo "CELL_NAME=cell"
+          } >> ./.env
 
           # generic retry wrapper for *all* commands
-          n=0
-          max=3
+          n=0; max=3
           until [ "$n" -ge "$max" ]; do
-            echo "\nAttempt $((n+1))/$(($max)) : ${{ matrix.run_cmd }}"
+            echo -e "\nAttempt $((n+1))/$max : ${{ matrix.run_cmd }}"
             if PYTHONPATH=. uv run ${{ matrix.run_cmd }}; then
               echo "Succeeded on attempt $((n+1))"
               break
             fi
             n=$((n+1))
-            echo "Retrying in 5s..."
-            sleep 5
+            echo "Retrying in 5 s…"; sleep 5
           done
-
           if [ "$n" -ge "$max" ]; then
             echo "Command failed after $max attempts." >&2
             exit 1
@@ -94,11 +111,11 @@ jobs:
       - name: Download diagnose package
         if: failure()
         run: |
-          echo "Attempting to fetch the diagnosis package..."
+          echo "Attempting to fetch the diagnosis package…"
           curl --fail -s -X GET \
-            "https://${{ env.PORTAL_STG_HOST }}/api/v1/internal/system/diagnosis-package/zip" \
+            "https://${PORTAL_STG_HOST}/api/v1/internal/system/diagnosis-package/zip" \
             -H 'Accept: application/zip' \
-            -H "Authorization: Bearer ${{ env.PORTAL_STG_ACCESS_TOKEN }}" \
+            -H "Authorization: Bearer ${PORTAL_STG_ACCESS_TOKEN}" \
             -o "diagnose-${{ github.run_id }}.zip"
       - name: Upload diagnose artifact
         if: failure()
@@ -106,11 +123,15 @@ jobs:
         with:
           name: diagnose-package
           path: diagnose-${{ github.run_id }}.zip
-      # Always run cleanup, whether success or failure
-      - name: Cleanup - Delete instance
-        if: always()
-        run: |
-          ./scripts/delete_nova_instance.sh
+  # This job cleans up the NOVA instance
+  cleanup-instance:
+    if: always()
+    needs: [ setup-instance, test-integration ]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Cleanup – Delete instance
+        run: ./scripts/delete_nova_instance.sh
         env:
-          PORTAL_STG_INSTANCE_ID: ${{ env.PORTAL_STG_INSTANCE_ID }}
-          PORTAL_STG_ACCESS_TOKEN: ${{ env.PORTAL_STG_ACCESS_TOKEN }}
+          PORTAL_STG_INSTANCE_ID: ${{ needs.setup-instance.outputs.portal_stg_instance_id }}
+          PORTAL_STG_ACCESS_TOKEN: ${{ needs.setup-instance.outputs.portal_stg_access_token }}
