--- a/.github/workflows/nova-run-examples.yaml
+++ b/.github/workflows/nova-run-examples.yaml
@@ -44,6 +44,7 @@ jobs:
   # This job runs the integration tests and examples
   test-integration:
     runs-on: ubuntu-latest
+    needs: setup-instance
     strategy:
       fail-fast: false
       max-parallel: 1
