--- a/.github/workflows/nova-run-examples.yaml
+++ b/.github/workflows/nova-run-examples.yaml
@@ -37,13 +37,12 @@ jobs:
           fi
           # expose as job outputs
           echo "Expose"
-          echo "portal_stg_host=$PORTAL_STG_HOST" >> "$GITHUB_ENV"
-          echo "portal_stg_instance_id=$PORTAL_STG_INSTANCE_ID" >> "$GITHUB_ENV"
+          echo "portal_stg_host=$PORTAL_STG_HOST" >> "$GITHUB_OUTPUT"
+          echo "portal_stg_instance_id=$PORTAL_STG_INSTANCE_ID" >> "$GITHUB_OUTPUT"
           TOKEN_B64="$(printf '%s' "$PORTAL_STG_ACCESS_TOKEN" | base64 -w0)"
           echo "::add-mask::$TOKEN_B64"
-          echo "portal_stg_access_token_b64=$TOKEN_B64" >> "$GITHUB_ENV"
+          echo "portal_stg_access_token_b64=$TOKEN_B64" >> "$GITHUB_OUTPUT"
           cat $GITHUB_OUTPUT
-          cat $GITHUB_ENV
   # This job runs the integration tests and examples
   test-integration:
     runs-on: ubuntu-latest
@@ -90,7 +89,7 @@ jobs:
       - name: "Run ${{ matrix.id }} suite"
         run: |
           echo "github env"
-          cat $GITHUB_ENV
+          cat $GITHUB_OUTPUT
 
           NOVA_ACCESS_TOKEN="$(echo "$NOVA_ACCESS_TOKEN_B64" | base64 -d)"
           echo "DEBUG: decoded token length = ${#NOVA_ACCESS_TOKEN}"
