--- a/.github/workflows/nova-run-examples.yaml
+++ b/.github/workflows/nova-run-examples.yaml
@@ -14,7 +14,7 @@ jobs:
     outputs:
       portal_stg_host: ${{ steps.create.outputs.portal_stg_host }}
       portal_stg_instance_id: ${{ steps.create.outputs.portal_stg_instance_id }}
-      portal_stg_access_token_b64: ${{ steps.create.outputs.portal_stg_access_token_b64 }}
+      portal_stg_access_token: ${{ steps.create.outputs.portal_stg_access_token }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -36,12 +36,11 @@ jobs:
             exit 1
           fi
           # expose as job outputs
-          echo "Expose"
           echo "portal_stg_host=$PORTAL_STG_HOST" >> "$GITHUB_OUTPUT"
           echo "portal_stg_instance_id=$PORTAL_STG_INSTANCE_ID" >> "$GITHUB_OUTPUT"
+
           TOKEN_B64="$(printf '%s' "$PORTAL_STG_ACCESS_TOKEN" | base64 -w0)"
-          echo "::add-mask::$TOKEN_B64"
-          echo "portal_stg_access_token_b64=$TOKEN_B64" >> "$GITHUB_OUTPUT"
+          echo "portal_stg_access_token=$(echo $TOKEN_B64 | base64 -w0 | base64 -w0)" >> $GITHUB_OUTPUT
           cat $GITHUB_OUTPUT
   # This job runs the integration tests and examples
   test-integration:
@@ -72,9 +71,12 @@ jobs:
             run_cmd: "python examples/08_multi_step_movement_with_collision_free.py"
           - id: 14_welding_example
             run_cmd: "python nova_rerun_bridge/examples/14_welding_example.py"
+    secrets:
+      env_vars: |
+        PORTAL_STG_ACCESS_TOKEN: ${{ needs.setup-instance.outputs.portal_stg_access_token }}
     env:
-      NOVA_API: ${{ needs.setup-instance.outputs.portal_stg_host }}
-      NOVA_ACCESS_TOKEN_B64: ${{ needs.setup-instance.outputs.portal_stg_access_token_b64 }}
+      PORTAL_STG_HOST: ${{ needs.setup-instance.outputs.portal_stg_host }}
+      env_vars: ${{ secrets.env_vars }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -86,15 +88,20 @@ jobs:
         run: |
           pip install uv
           uv sync --extra "nova-rerun-bridge"
+      - name: Decode secrets as environment variables
+        run: |
+          for i in $env_vars; do
+            i=$(echo $i | sed 's/=.*//g')=$(echo ${i#*=} | base64 -di | base64 -di)
+            echo ::add-mask::${i#*=}
+            printf '%s\n' "$i" >> $GITHUB_ENV
+          done
       - name: "Run ${{ matrix.id }} suite"
         run: |
           echo "github env"
-          echo "nova api:"
-          echo $NOVA_API
-          echo "nova access token:"
-          echo $NOVA_ACCESS_TOKEN_B64
+          echo $GITHUB_ENV
 
-          NOVA_ACCESS_TOKEN="$(echo "$NOVA_ACCESS_TOKEN_B64" | base64 -d)"
+          NOVA_API=$PORTAL_STG_HOST
+          NOVA_ACCESS_TOKEN=$PORTAL_STG_ACCESS_TOKEN
           echo "DEBUG: decoded token length = ${#NOVA_ACCESS_TOKEN}"
           [[ -z "${NOVA_ACCESS_TOKEN}" ]] && {
             echo "❌ NOVA_ACCESS_TOKEN is empty. Aborting."; exit 1; }
