--- a/.github/workflows/nova-run-examples.yaml
+++ b/.github/workflows/nova-run-examples.yaml
@@ -74,8 +74,6 @@ jobs:
             run_cmd: "python examples/08_multi_step_movement_with_collision_free.py"
           - id: 14_welding_example
             run_cmd: "python nova_rerun_bridge/examples/14_welding_example.py"
-    env:
-      PORTAL_STG_HOST: ${{ needs.setup-instance.outputs.portal_stg_host }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -96,11 +94,14 @@ jobs:
           op: decode
           in: ${{ needs.setup-instance.outputs.portal_stg_access_token }}
       - name: "Run ${{ matrix.id }} suite"
+        env:
+          NOVA_API: ${{ needs.setup-instance.outputs.portal_stg_host }}
+          NOVA_ACCESS_TOKEN: ${{ steps.role.outputs.out }}
         run: |
           echo $GITHUB_ENV
-
-          NOVA_API=$PORTAL_STG_HOST
-          NOVA_ACCESS_TOKEN=$PORTAL_STG_ACCESS_TOKEN
+          echo "${{ steps.role.outputs.out }}"
+          echo $NOVA_API
+          echo $NOVA_ACCESS_TOKEN
           echo "DEBUG: decoded token length = ${#NOVA_ACCESS_TOKEN}"
           [[ -z "${NOVA_ACCESS_TOKEN}" ]] && {
             echo "❌ NOVA_ACCESS_TOKEN is empty. Aborting."; exit 1; }
