--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ dependencies = [
     "asyncua>=1.1.5,<2",
     "docstring-parser>=0.16.0",
     "exceptiongroup>=1.2.2",
+    "nats-py>=2.10.0",
+    "blinker>=1.9.0",
 ]
 
 [project.optional-dependencies]
