--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,35 +14,35 @@ authors = [
 requires-python = "~=3.10"
 readme = "README.md"
 dependencies = [
-    "httpx >=0.28.0,<0.29",
-    "wandelbots_api_client ==25.1.0",
-    "websockets >=14.1.0,<15",
-    "loguru >=0.7.2,<0.8",
-    "pydantic >=2.11.4,<3",
-    "python-decouple ~=3.8",
-    "scipy >=1.14.1,<2",
-    "aiostream >=0.6.4,<0.7",
-    "anyio >=4.8.0,<5",
-    "asyncstdlib >=3.13.0,<4",
-    "numpy >1.1.19",
-    "asyncua >=1.1.5,<2",
-    "docstring-parser >=0.16.0",
+    "httpx>=0.28.0,<0.29",
+    "wandelbots_api_client==25.5.0",
+    "websockets>=14.1.0,<15",
+    "loguru>=0.7.2,<0.8",
+    "pydantic>=2.11.4,<3",
+    "python-decouple~=3.8",
+    "scipy>=1.14.1,<2",
+    "aiostream>=0.6.4,<0.7",
+    "anyio>=4.8.0,<5",
+    "asyncstdlib>=3.13.0,<4",
+    "numpy>1.1.19",
+    "asyncua>=1.1.5,<2",
+    "docstring-parser>=0.16.0",
     "exceptiongroup>=1.2.2",
 ]
 
 [project.optional-dependencies]
 nova-rerun-bridge = [
-    "rerun-sdk ==0.22.1",
-    "requests >=2.32.3",
-    "APScheduler >=3.11.0",
-    "trimesh >=4.5.3",
+    "rerun-sdk==0.22.1",
+    "requests>=2.32.3",
+    "APScheduler>=3.11.0",
+    "trimesh>=4.5.3",
 ]
 benchmark = [
-    "rerun-sdk ==0.22.1",
-    "requests >=2.32.3",
-    "APScheduler >=3.11.0",
-    "trimesh >=4.5.3",
-    "pyyaml >5.3",
+    "rerun-sdk==0.22.1",
+    "requests>=2.32.3",
+    "APScheduler>=3.11.0",
+    "trimesh>=4.5.3",
+    "pyyaml>5.3",
 ]
 
 [project.scripts]
