--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ dependencies = [
     "asyncua>=1.1.5,<2",
     "docstring-parser>=0.16.0",
     "exceptiongroup>=1.2.2",
+    "nats-py>=2.10.0",
+    "blinker>=1.9.0",
 ]
 
 [project.optional-dependencies]
@@ -57,6 +59,7 @@ dev = [
     "pre-commit>=4.0.1,<5",
     "icecream>=2.1.4,<3",
     "ipython<9",
+    "freezegun>=1.5.1",
 ]
 
 [tool.hatch.build.targets.sdist]
