--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,6 +129,11 @@ match = "(main|master)"
 prerelease_token = "rc"
 prerelease = false
 
+[tool.semantic_release.branches.nightly]
+match = "nightly"
+prerelease = true
+prerelease_token = "dev"   # produces v1.2.3-dev20250606
+
 [tool.semantic_release.changelog]
 changelog_file = "CHANGELOG.md"
 exclude_commit_patterns = []
